# LED_Dimmer

./: .clang-format  .gitignore  ArtifactCreation.kibot.yaml  Gruffalo_Dimmer.code-workspace  KiCost.xlsx  Readme.md  docker-compose.yml
.github/workflows/: FirmwareTasks.yml  main.yml
.pdm/: uc.module.setup.ucConfig.com.silabs.ss.framework.project.toolchain.core.default#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.12.2.1.20221205.gcc.slsproj  uc.module.setup.ucTemplate.com.silabs.ss.framework.project.toolchain.core.default#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.12.2.1.20221205.gcc.slsproj
config/: app_log_config.h  blender.kibot.yaml  bom.kibot.yaml  bom_KiCost_DigiKey.kibot.yaml  pin_config.h  sl_clock_manager_oscillator_config.h  sl_iostream_eusart_inst_config.h  stepmodel.kibot.yaml
config/btconf/: slc_args.json
doc/PWM And Breathe Effect/: PWM And Breathe Effect.ipynb
firmware/Gruffalo_Dimmer/: .clang-format-ignore  .cppcheck_ignore  .projectchecksums  Gruffalo_Dimmer.pintool  Gruffalo_Dimmer.slcp  Gruffalo_Dimmer.slps  app.c  app.h  gatt_service_device_information_legacy.md  main.c  project.cppcheck  sl_gatt_service_device_information.c  sl_gatt_service_device_information_override.c  sl_gatt_service_device_information_warning.c  staticCheck.bat  vscode.conf
firmware/Gruffalo_Dimmer/autogen/: .crc_config.crc  gatt_db.c  gatt_db.h  linkerfile.ld  sl_bluetooth.c  sl_component_catalog.h  sl_event_handler.c  sl_iostream_handles.c  sl_iostream_init_eusart_instances.c  sl_power_manager_handler.c
firmware/Gruffalo_Dimmer/cmake_gcc/: CMakeLists.txt  CMakePresets.json  Gruffalo_Dimmer.cmake  Gruffalo_Dimmer_project.cmake  toolchain.cmake
firmware/Gruffalo_Dimmer/config/: app_log_config.h  nvm3_default_config.h  pin_config.h  sl_clock_manager_tree_config.h  (+2 more)
firmware/test/: project.yml
hardware/: Encoder.kicad_sch  LED_Dimmer.kicad_pcb  LED_Dimmer.kicad_prl  LED_Dimmer.kicad_pro  LED_Dimmer.kicad_sch  LED_Dimmer.xml  Readme.md  eagle.epf  fp-info-cache  fp-lib-table  sym-lib-table
hardware/3D Models/: Header 2x05 - 0.005in - SMD -Amphenol 20021121-00010XXLFc v3.step  Placeholder v2.step  SOT23-3 v1.step
hardware/Libraries/: BGM220P_Breakout.kicad_sym  Gruffalo_Dimmer.bak  Gruffalo_Dimmer.kicad_sym
src/: .clang-format  .cproject  .project  .projectlinkstore  Gruffalo Dimmer.pintool  Gruffalo Dimmer.slcp  Gruffalo Dimmer.slps  Gruffalo_Dimmer.pintool  Gruffalo_Dimmer.slcp  Gruffalo_Dimmer.slps  LED_Dimmer.slcp  LED_Dimmer.slps  app.c  bt_soc_empty.slcw  imported_project_report.html  main.c  readme.md  sl_gatt_service_device_information.c  sl_gatt_service_device_information_override.c  src.pintool
src/.pdm/: uc.module.setup.componentSetup.com.silabs.ss.framework.project.toolchain.core.default#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.10.2.1.20201103.gcc.slsproj  uc.module.setup.componentSetup.com.silabs.ss.framework.project.toolchain.core.default#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.12.2.1.20221205.gcc.slsproj  uc.module.setup.componentSetup.com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.debug#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.7.2.1.20170904.gcc.slsproj  uc.module.setup.ucConfig.com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.debug#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.7.2.1.20170904.gcc.slsproj  uc.module.setup.ucTemplate.com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.debug#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.7.2.1.20170904.gcc.slsproj
src/.uceditor/: .Gruffalo_Dimmer.app_assert.cedit  .Gruffalo_Dimmer.app_log.cedit  .Gruffalo_Dimmer.iostream_usartdebugSerial.cedit  .Gruffalo_Dimmer.rail_util_pti.cedit  .Gruffalo_Dimmer.sleeptimer.cedit
src/Gruffalo_Dimmer/: .cproject  .project  .projectlinkstore  Gruffalo_Dimmer.pintool  Gruffalo_Dimmer.slcp  app.c  imported_project_report.html
src/autogen/: .crc_config.crc  gatt_db.c  linkerfile.ld  mbedtls_config_autogen.h  sl_bluetooth.c  sl_component_catalog.h  sl_emlib_gpio_simple_init.c  sl_event_handler.c  sl_iostream_handles.c  sl_iostream_init_eusart_instances.c  sl_power_manager_handler.c
src/cmake_gcc/: CMakeLists.txt  CMakePresets.json  Gruffalo_Dimmer.cmake  Gruffalo_Dimmer_project.cmake
src/config/: app_log_config.h  pin_config.h  sl_bluetooth_config.h  sl_bluetooth_connection_config.h  sl_bt_host_adaptation_config.h  sl_clock_manager_oscillator_config.h  sl_clock_manager_tree_config.h  sl_emlib_gpio_init_quad1_0_Pin_config.h  sl_fem_util_config.h  sl_iostream_eusart_inst_config.h  sl_memory_manager_config.h  sl_memory_manager_region_config.h  sl_power_manager_config.h  sl_rail_util_pti_config.h
src/inc/: PWMControl.h  buttonActions.h  buttons.h  debounce.h  gpio_HW_types.h  interrupt_HW.h  interrupt_HW_types.h  sleepyTimers_HW.h  sleepyTimers_HW_types.h  timer_HW.h  timer_HW_types.h
src/src/: PWMControl.c  buttonActions.c  buttons.c  debounce.c  gpio_HW.c  interrupt_HW.c  sleepyTimers_HW.c  timer_HW.c
test/: Gruffalo_Dimmer.code-workspace  project.yml
test/test/: test_GPIO_HW.c  test_PWMControl.c  test_button.c  test_buttonActions.c  test_buttons.c  test_debounce.c  test_interrupt_HW.c  test_sleeptimer_HW.c  test_sleepyTimers_HW.c  test_timer_HW.c
(+191 files in other folders)
